--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
-<h1>Este es un sitio auspiciado por GitHub</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Consultoria en SAP BUS</title>
+</head>
+<body>
+    <h1>Este es un sitio auspiciado por GitHub</h1>
+<h2>Cesar Alfredo</h2>
+<h3>Sobre Mi</h3>
+<p>
+    Consultor SAP Business One. Profesional de Ingeniería de Sistemas. 
+    Investigador, responsable, proactivo y con facilidad de trabajar en equipo. 
+    Desenvolvimiento bajo presión con habilidades para garantizar confiabilidad mediante 
+    gestión en base a resultados. Honesto y leal con la organización.</p>
 <p>Fue creado en el curso de GitHub</p>
 <p><img src="https://cdn.domestika.org/c_limit,dpr_1.0,f_auto,q_auto,w_820/v1522534208/content-items/002/311/619/astroboy-original.gif?1522534208"/></p>
+
+</body>
+<footer>
+    <p>Derechos reservado - 2022</p>
+</footer>
+</html>
