--- a/index.html
+++ b/index.html
@@ -4,22 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultoria en SAP BUS</title>
+    <link rel="icon" type="image/png" href="https://i.ibb.co/WsVhhgp/favicon-sap.png"  sizes="32x32">
+    <title>Consultoria en SAP Business One</title>
 </head>
 <body>
+    <style>
+        h1,h2,h3,p{
+            align-content: center;
+            text-align: center;
+            text-decoration: solid;
+            font-family:Georgia, 'Times New Roman', Times, serif;
+           
+        }
+        #resumen{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #1B71CC;
+            width: 50%;
+            height: 30%;
+            margin-left: 25%;
+            margin-right: 25%;
+        }
+        footer {
+            background-color: brown;
+            color: azure;
+        }
+    </style>
     <h1>Este es un sitio auspiciado por GitHub</h1>
 <h2>Cesar Alfredo</h2>
 <h3>Sobre Mi</h3>
-<p>
-    Consultor SAP Business One. Profesional de Ingeniería de Sistemas. 
-    Investigador, responsable, proactivo y con facilidad de trabajar en equipo. 
-    Desenvolvimiento bajo presión con habilidades para garantizar confiabilidad mediante 
-    gestión en base a resultados. Honesto y leal con la organización.</p>
-<p>Fue creado en el curso de GitHub</p>
-<p><img src="https://cdn.domestika.org/c_limit,dpr_1.0,f_auto,q_auto,w_820/v1522534208/content-items/002/311/619/astroboy-original.gif?1522534208"/></p>
-
+<hr>
+    <div id="resumen">
+        <p>
+            Consultor SAP Business One. Profesional de Ingeniería de Sistemas. 
+            Investigador, responsable, proactivo y con facilidad de trabajar en equipo. 
+            Desenvolvimiento bajo presión con habilidades para garantizar confiabilidad mediante 
+            gestión en base a resultados. Honesto y leal con la organización.
+        </p>
+    </div>
+<p class="slogan">Promueve - Desarrolla - Crea</p>
+<p><a href="https://ibb.co/XDJR2sS"><img src="https://i.ibb.co/7QymYW2/sap-imagen.png" alt="sap-imagen" border="0"></a></p>
 </body>
 <footer>
-    <p>Derechos reservado - 2022</p>
+    <hr>
+    <p>Derechos reservado &copy;2022 Consulting SAP</p>
 </footer>
 </html>
